--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,10 @@
     <string name="hint_login_email">E-mail</string>
     <string name="hint_login_password">Password</string>
 
+    <string name="hint_register_username">Username</string>
     <string name="hint_register_firstname">First name</string>
     <string name="hint_register_lastname">Last name</string>
+    <string name="hint_register_email">E-mail</string>
     <string name="hint_register_password">Password</string>
     <string name="hint_register_repeat_password">Repeat password</string>
 
