--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Lab Manager</string>
-    <string name="mangaTitle">Manga</string>
+    <string name="app_name" translatable="false">Lab Manager</string>
+    <string name="mangaTitle" translatable="false">Manga</string>
 
-    <string name="bottomNavBar_home">Home</string>
+    <string name="bottomNavBar_home" translatable="false">Home</string>
     <string name="bottomNavBar_equipment">Equipment</string>
     <string name="bottomNavBar_stats">Stats</string>
 
-    <string name="title_login">Login</string>
+    <string name="title_login" translatable="false">Login</string>
     <string name="title_register">Register</string>
 
     <string name="subtitle_login">Don\'t have an account yet\?</string>
@@ -20,7 +20,7 @@
     <string name="hint_register_username">Username</string>
     <string name="hint_register_firstname">First name</string>
     <string name="hint_register_lastname">Last name</string>
-    <string name="hint_register_email">E-mail</string>
+    <string name="hint_register_email" translatable="false">E-mail</string>
     <string name="hint_register_password">Password</string>
     <string name="hint_register_repeat_password">Repeat password</string>
 
@@ -29,16 +29,27 @@
 
     <string name="equipment_device_motor_state_on">Motor ON</string>
     <string name="equipment_device_motor_state_off">Motor OFF</string>
-    <string name="equipment_device_volume">%1$sL</string>
-    <string name="equipment_device_volume_default">0.0L</string>
-    <string name="equipment_device_temp">%1$sºC</string>
-    <string name="equipment_device_temp_default">0.0ºC</string>
+    <string name="equipment_device_volume" translatable="false">%1$sL</string>
+    <string name="equipment_device_volume_default" translatable="false">0.0L</string>
+    <string name="equipment_device_temp" translatable="false">%1$sºC</string>
+    <string name="equipment_device_temp_default" translatable="false">0.0ºC</string>
 
-    <string name="profile_placeholder_firstlastname">John Doe</string>
+    <string name="profile_placeholder_firstlastname" translatable="false">John Doe</string>
     <string name="profile_placeholder_username">Username</string>
     <string name="profile_placeholder_email">example@domain.com</string>
     <string name="profile_placeholder_lab">Lab Name</string>
     <string name="profile_btn_logout">Logout</string>
+
+    <string name="settings_label_theme">Theme: </string>
+    <string name="settings_label_language">Language: </string>
+
+    <string name="settings_spinner_options_theme_sameasdevice">Follow System</string>
+    <string name="settings_spinner_options_theme_dark">Dark</string>
+    <string name="settings_spinner_options_theme_light">Light</string>
+
+    <string name="settings_spinner_options_lang_default">Default (English)</string>
+    <string name="settings_spinner_options_lang_en">English</string>
+    <string name="settings_spinner_options_lang_pt">Portuguese</string>
 
     <string name="error_login_empty_fields">Username and Password fields cannot be empty.</string>
     <string name="error_login_auth_failed">Wrong username or password.</string>
